# 1eft

./: .gitignore  1eft.py  README.md  epic_tool.py  pyproject.toml  requirements.txt
1eft~srcs/: 1!1eft  11!1eft  12!1eft  13!1eft  1@!1eft  2!1eft  3!1eft  4!1eft  5!1eft  a!1eft  b!1eft  c!1eft  d!1eft  gvess!1eft
grammar/: grammar.lark
src/: parser.py
src/lang_1eft/: cli.py
src/lang_1eft/codegen/: codegen_util.py  file_emitter.py  module_builder.py  predef_functions.py
src/lang_1eft/pipeline/: ast_constructor.py  ast_definitions.py  ast_util.py  grammar.lark  parser.py
